--- a/src/main/resources/templates/country/list.html
+++ b/src/main/resources/templates/country/list.html
@@ -8,16 +8,15 @@
     <h1>Country一覧</h1>
     <table>
         <tr>
-            <th>コード</th>
-            <th>国名</th>
-            <th>人口</th>
+            <th>B_ID  /  </th>
+            <th>C_ID  /  </th>
+            <th>URLジャンプ先</th>
         </tr>
-        <tr th:each="data : ${countrylist}">
-            <td th:text="${data.code}"></td>
-            <td th:text="${data.name}"></td>
-            <td th:text="${data.population}"></td>
-            <td><a th:href="'/country/detail/' + ${data.code}">詳細</a></td>
-            <td><a th:href="'/country/delete/' + ${data.code}">削除</a></td>
+        <tr th:each="data : ${allList}">
+            <td th:text="${data.aaa}"></td>
+            <td th:text="${data.bbb}"></td>
+            <td><a th:href="'https://www.yahoo.co.jp/'
+             + ${data.aaa} + '/' + ${data.bbb}">ジャンプ</a></td>
         </tr>
     </table>
 </body>
